--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -1,5 +1,7 @@
 <div class="jumbotron text-center">
   <div class="container">
- <h1> Welcome to my sms site, wooot woot </h1>
+ <h1> Thanks! Your code is on the way please enter verification number.</h1>
+
+ 
   </div>
 </div>
