playing with phone_id

--- a/app/views/apps/texty/index.html.erb
+++ b/app/views/apps/texty/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <h1> opening text </h1>
 
-
+<%= f.label :number, @phone_id %>
 
   <div class="container" id="app-texty-form">
     <%= form_for @phone, url: '/apps/texty/send_text' do |f| %>
