--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -5,6 +5,12 @@
 
   </div>
 
-
+  <!-- <div class="container" id="app-welcome-form">
+    <%= form_for @phone, url: '/welcome' do |f| %>
+    <%= f.label :number, 'Enter Your Phone Number' %>
+    <%= f.telephone_field :number, class: 'form-control', placeholder: '###-###-####' %><br>
+    <%= f.submit 'Send Text', class: 'btn btn-primary' %>
+    <% end %>
+  </div> -->
 
 </div>
