--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -5,6 +5,16 @@
 
   </div>
 
+  <input type="text" id ="txtBox" />
+  <input type="button" name="btnButton"  value="Submit" onclick="checkValue()" />
 
+  <script type="text/JavaScript">
+  function checkValue() {
+  var secretcode = document.getElementById("txtBox").value;
+  if (secretcode == "1234"){
+  window.location.href = 'secret.html';
+  }
+  }
+  </script>
 
 </div>
