--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -8,6 +8,8 @@
 
 </div>
 
+<%= text_area "post", "body", "cols" => 20, "rows" => 40%>
+
 <input type="text" id ="txtBox" />
 <input type="button" name="btnButton"  value="Submit" onclick="checkValue()" />
 
