--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -7,7 +7,7 @@
 
 
 </div>
-
+<%= @phone_params %>
 <%= text_area "post", "body", "cols" => 20, "rows" => 2 %>
 
 <input type="text" id ="txtBox" />
