--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -7,7 +7,8 @@
 
 
 </div>
-<%= @phone_params %>
+
+<%= <h1> @phone_params </h1> %>
 <%= text_area "post", "body", "cols" => 20, "rows" => 2 %>
 
 <input type="text" id ="txtBox" />
