--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -8,7 +8,7 @@
 
 </div>
 
-<%= <h1> @phone_params </h1> %>
+<%= <h1> @phone </h1> %>
 <%= text_area "post", "body", "cols" => 20, "rows" => 2 %>
 
 <input type="text" id ="txtBox" />
