accesing @phone to verify route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>SMS</title>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+   <%= include_gon %>
+  
   <%= stylesheet_link_tag  '//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css' %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag  'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js' %>
   <%= javascript_include_tag  '//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js' %>
+
   <%= csrf_meta_tags %>
 </head>
 <body>
