--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -13,12 +13,17 @@
 
 <input type="text" id ="txtBox" />
 <input type="button" name="btnButton"  value="Submit" onclick="checkValue()" />
+<!--
+<script>
+console.log ('gon.phone')
+</script> -->
 
-<script type="text/JavaScript">
+<!-- <script>
 function checkValue() {
+
 var secretcode = document.getElementById("txtBox").value;
 if (secretcode == "1234"){
 window.location.href = 'secret.html';
 }
 }
-</script>
+</script> -->
