--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -10,5 +10,13 @@
 
 <%= text_area "post", "body", "cols" => 20, "rows" => 2 %>
 
-<input type="text" id ="txtBox" />
-<input type="button" name="btnButton"  value="Submit" onclick="checkValue()" />
+<!-- <div class="container" id="app-texty-form">
+  <%= form_for @phone, url: '/apps/texty/send_text' do |f| %>
+  <%= f.label :number, 'Enter Your Phone Number' %>
+  <%= f.telephone_field :number, class: 'form-control', placeholder: '###-###-####' %>
+
+
+  <br>
+  <%= f.submit 'Send Text', class: 'btn btn-primary' %>
+  <% end %>
+</div> -->
