--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -10,8 +10,8 @@
 
 
 
-<div class="container" id="app-texty-form-verify">
-  <%= form_for @phone, url: '/apps/texty/verify' do |f| %>
+<div class="container" id="app-texty-form-verify-go">
+  <%= form_for @phone, url: '/apps/texty/go' do |f| %>
   <%= f.label :vercode, 'Enter your verification code' %>
   <%= f.telephone_field :vercode, class: 'form-control', placeholder: '############' %>
 
