--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -11,7 +11,7 @@
 
 
 <div class="container" id="app-texty-form-verify-go">
-  <%= form_for @phone, url: '/apps/texty/go' do |f| %>
+  <%= form_for @phone, url: '/apps/texty/update' do |f| %>
   <%= f.label :vercode, 'Enter your verification code' %>
   <%= f.telephone_field :vercode, class: 'form-control', placeholder: '############' %>
 
