--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -11,12 +11,23 @@
 
 
 <div class="container" id="app-texty-form-verify-go">
-  <%= form_for @phone, url: '/apps/texty/update' do |f| %>
+  <%= form_for @phone, url: '/apps/texty/update', :html => { :onsubmit => 'checkValue();' } do |f| %>
   <%= f.label :vercode, 'Enter your verification code' %>
-  <%= f.telephone_field :vercode, class: 'form-control', placeholder: '############' %>
+  <%= f.password_field :vercode, class: 'form-control', placeholder: '############' %>
 
 
   <br>
-  <%= f.submit 'Verify', class: 'btn btn-primary' %>
+  <%= f.submit 'Verify', class: 'btn btn-primary'%>
   <% end %>
 </div>
+
+<script>
+function checkValue() {
+
+var secretcode = document.getElementById("phone_vercode").value;
+if (secretcode == "1234"){
+window.location.href = 'secret.html';
+puts "basfasfasfasfasf"
+}
+}
+</script>
