--- a/app/views/apps/texty/index.html.erb
+++ b/app/views/apps/texty/index.html.erb
@@ -10,6 +10,8 @@
     <%= form_for @phone, url: '/apps/texty/send_text' do |f| %>
     <%= f.label :number, 'Enter Your Phone Number' %>
     <%= f.telephone_field :number, class: 'form-control', placeholder: '###-###-####' %>
+    <%= f.label :vercode, 'Choose a 4 number PIN' %>
+    <%= f.password_field :vercode, class: 'form-control', placeholder: '############' %>
 
 
     <br>
