--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
   <div class="container">
- <h1> Thanks! Your code is on the way please enter verification number <%= @phone.number %>.</h1>
+ <h1> Thanks! Your code is on the way please enter verification number on the box bellow.</h1>
 
   </div>
 
