--- a/app/views/apps/texty/index.html.erb
+++ b/app/views/apps/texty/index.html.erb
@@ -11,7 +11,7 @@
     <%= f.label :number, 'Enter Your Phone Number' %>
     <%= f.telephone_field :number, class: 'form-control', placeholder: '###-###-####' %>
     <%= f.label :vercode, 'Choose a 4 number PIN' %>
-    <%= f.password_field :vercode + "123", class: 'form-control', placeholder: '############' %>
+    <%= f.password_field :vercode, class: 'form-control', placeholder: '############' %>
 
 
     <br>
