--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
 
 <%= link_to "Create New User", new_user_path %>
 <%if @users.present? %>
-<h1> <%= @user %>
+<h1> <%= @user.id %>
   <p>Below is the list of users</p>
   <table width="100%">
     <tr>
