working on post req back to pixfizz

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,6 @@
-<div class="jumbotron text-center">
-  <div class="container">
- <h1> <%= 'Your phone: '+ @phone.number %> <br> <%= 'Your vercode: ' + @phone.vercode %></h1>
-
-
-
-<%= javascript_include_tag "api.js" %>
-</div>
-</div>
-
-
-
-
-
-
-
-
-</div>
-</div>
+<!-- <%= form_tag users_path, :method => :post do %>
+   email : <%=text_field_tag :email%><br />
+   first_name :<%=text_field_tag :first_name%><br />
+   last_name :<%=text_field_tag :last_name%><br/><br/>
+   <%=submit_tag "save"%>
+<%end%> -->
