--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,1 @@
-<div class="jumbotron text-center">
-  <div class="container">
- <h1> <%= 'Your phone: '+ @phone.number %> <br> <%= 'Your vercode: ' + @phone.vercode %></h1>
- <h1> <%= @user.id %>
-
-<%= javascript_include_tag "api.js" %>
-</div>
-</div>
+<h1>asdfjaskdhkjashdjkhaskd<h1>
