--- a/app/views/apps/texty/authcallback.html.erb
+++ b/app/views/apps/texty/authcallback.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center">
+<!-- <div class="jumbotron text-center">
   <div class="container">
  <h1> This is the authcallback Page, <%= @phone.number + @phone.vercode %></h1>
 <h1><%= @phone %></h1>
@@ -7,4 +7,4 @@
 <%= debug(params) if Rails.env.development? %>
 <%= @phone %>
 
-</div>
+</div> -->
