close to fixing from last user to current user framework

--- a/app/views/apps/texty/index.html.erb
+++ b/app/views/apps/texty/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="container" id="app-texty-title">
     <h1>Welcome<%= @user.id %></h1>
-  <!-- </div>
+  </div>
 
 
 
 
 
 
-  <! <div class="container navbar-fixed-bottom" id="app-texty-footer">
+<div class="container navbar-fixed-bottom" id="app-texty-footer">
     <p>*please note that your phone number will not be saved, shared, or sold by this application nor any other party, it is only used for the purposes of this exercise</p>
   </div>
-</div> -->
+</div>
