--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -1,4 +1,4 @@
-<!-- <div class="jumbotron text-center">
+<div class="jumbotron text-center">
   <div class="container">
  <h1> Thanks! Your code is on the way please enter verification code on the box below. </h1>
 
@@ -20,4 +20,4 @@
   <br>
   <%= f.submit 'Verify', class: 'btn btn-primary'%>
   <% end %>
-</div> -->
+</div>
