--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
   <div class="container">
- 
+ <h1> <%= 'Your phone: '+ @phone.number %> <br> <%= 'Your vercode: ' + @phone.vercode %></h1>
 
 
 
