--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -31,6 +31,6 @@
 
 
   <br>
-  <%= f.submit 'Verify', class: 'btn btn-primary'%>
+  <%= f.submit 'Re-send VerCode', class: 'btn btn-primary'%>
   <% end %>
 </div>
