--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -27,7 +27,7 @@
   <h1>Wrong phone number? Or resend sms?<h1>
   <%= form_for @phone, url: '/apps/texty/send_text'  do |f| %>
   <%= f.label :number, 'Enter your phone number' %>
-  <%= f.password_field :number, class: 'form-control', placeholder: '############' %>
+  <%= f.text_field :number, class: 'form-control', placeholder: '############' %>
 
 
   <br>
