--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -6,6 +6,8 @@
 
 <%= "Your phone number is :" + @phone.number + "Your code: " + @phone.vercode%>
 
+<%= "Your phone user_id is :" + @phone.user_id + "Your user_id is: " + @user.id%>
+
 </div>
 
 
