--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -6,7 +6,7 @@
 
 <%= "Your phone number is :" + @phone.number + "Your code: " + @phone.vercode%>
 
-<%= "Your phone user_id is :" + @phone.user_id + "Your user_id is: " + @user.id%>
+<%= "Your phone user_id is :" + @phone.user_id.to_s + "Your user_id is: " + @user.id.to_s%>
 
 </div>
 
