--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -28,7 +28,7 @@
 
 <div class="container" id="app-texty-form-verify-go">
   <h1>Wrong phone number? Or resend sms?<h1>
-  <%= form_for @phone, url: '/apps/texty/send_text'  do |f| %>
+  <%= form_for @phone, url: '/apps/texty/update_phone'  do |f| %>
   <%= f.label :number, 'Enter your phone number' %>
   <%= f.text_field :number, class: 'form-control', placeholder: '############' %>
   <!-- <%= f.label :vercode, 'Choose a 4 number PIN' %>
