--- a/app/views/apps/texty/update_phone.html.erb
+++ b/app/views/apps/texty/update_phone.html.erb
@@ -4,20 +4,20 @@
   </div>
   <h1> Forgot phone page  </h1>
 
-
-  <div class="container" id="app-texty-form">
-     <%= form_for @phone, url: '/apps/texty/send_text' do |f| %>
-     <%= f.label :number, 'Enter Your Phone Number' %>
-     <%= f.telephone_field :number, class: 'form-control', placeholder: '###-###-####' %>
-     <%= f.label :vercode, 'Choose a 4 number PIN' %>
-   <%= f.password_field :vercode, class: 'form-control', placeholder: '############' %>
+  <div class="container" id="app-texty-form-verify-go">
+    <h1>Wrong phone number? Or resend sms?<h1>
+    <%= form_for @phone, url: '/apps/texty/update_phone'  do |f| %>
+    <%= f.label :number, 'Enter your phone number' %>
+    <%= f.text_field :number, class: 'form-control', placeholder: '############' %>
 
 
 
-     <br>
-     <%= f.submit 'Send Text', class: 'btn btn-primary' %>
-     <% end %>
-   </div>
+
+    <br>
+    <%= f.submit 'Re-send VerCode', class: 'btn btn-primary'%>
+    <% end %>
+  </div>
+
 
 
 
