--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -27,5 +27,5 @@
 <br><br><br>
 
 <div class="container" id="app-texty-form-verify-go">
-<%= button_to "update_phone", '/apps/texty/update_phone', method: :get %>
+<%= button_to "forgot", '/apps/texty/forgot', method: :get %>
 </div>
