--- a/app/views/apps/texty/forgot.html.erb
+++ b/app/views/apps/texty/forgot.html.erb
@@ -4,6 +4,19 @@
 
   </div>
 
+  <div class="container" id="app-texty-form-verify-go">
+    <h1>Wrong phone number? Or resend sms?<h1>
+    <%= form_for @phone, url: '/apps/texty/update_phone'  do |f| %>
+    <%= f.label :number, 'Enter your phone number' %>
+    <%= f.text_field :number, class: 'form-control', placeholder: '############' %>
+
+
+
+
+    <br>
+    <%= f.submit 'Re-send VerCode', class: 'btn btn-primary'%>
+    <% end %>
+  </div>
 
 
 </div>
