--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -6,7 +6,7 @@
 
 <%= "Your phone number is :" + @phone.number + "Your code: " + @phone.vercode%>
 
-<%= "Your phone user_id is :" + @phone.user_id.to_s + "Your user_id is: " + @user.id.to_s%>
+
 
 </div>
 
@@ -28,14 +28,14 @@
 
 <div class="container" id="app-texty-form-verify-go">
   <h1>Wrong phone number? Or resend sms?<h1>
-  <%= form_for @phone, url: '/apps/texty/send_text'  do |f| %>
+  <%= form_for @phone, url: '/apps/texty/update_phone'  do |f| %>
   <%= f.label :number, 'Enter your phone number' %>
   <%= f.text_field :number, class: 'form-control', placeholder: '############' %>
-  
-
-
 
   <br>
   <%= f.submit 'Re-send VerCode', class: 'btn btn-primary'%>
   <% end %>
+</div>
+<div class="container" id="app-texty-form-verify-go">
+<%= button_to "Try again", '/apps/texty/forgot' , :method => :get, class: 'btn btn-primary'%>
 </div>
