--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -26,16 +26,7 @@
 
 <br><br><br>
 
-<div class="container" id="app-texty-form-verify-go">
-  <h1>Wrong phone number? Or resend sms?<h1>
-  <%= form_for @phone, url: '/apps/texty/update_phone'  do |f| %>
-  <%= f.label :number, 'Enter your phone number' %>
-  <%= f.text_field :number, class: 'form-control', placeholder: '############' %>
 
-  <br>
-  <%= f.submit 'Re-send VerCode', class: 'btn btn-primary'%>
-  <% end %>
-</div>
 <div class="container" id="app-texty-form-verify-go">
-<%= button_to "Try again", '/apps/texty/forgot' , :method => :get, class: 'btn btn-primary'%>
+  <h1>Wrong phone number? <%= button_to "Correct Number", '/apps/texty/forgot' , :method => :get, class: 'btn btn-primary'%><h1>
 </div>
