--- a/app/views/apps/texty/forgot.html.erb
+++ b/app/views/apps/texty/forgot.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron text-center">
   <div class="container">
- <h1> Phone number on record is wrong or need to resend SMS? </h1>
- <h1><%= @phone.vercode + "      " + @phone.number + "    " + @phone.user_id.to_s %>
+ <h2> Please provide us with your phone number so we can send you a new verification code </h2>
+
   </div>
 <br><br><br><br>
   <div class="container" id="app-texty-form-verify-go">
