--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,4 +1,10 @@
-html *
-{
-  font-family: 'Fira Mono'
+@font-face{
+    font-family: 'Fira Sans';
+    src: url("eot/FiraSans-Light.eot");
+    src: local("Fira Sans Light"),
+         url("eot/FiraSans-Light.eot") format("embedded-opentype"),
+         url("woff/FiraSans-Light.woff") format("woff"),
+         url("ttf/FiraSans-Light.ttf") format("truetype");
+    font-weight: 300;
+    font-style: normal;
 }
