--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -1,7 +1,7 @@
 $brand-primary: #532F8C;
 $brand-language: #B01302;
 
-@font-face{
+.font-face{
     font-family: 'Fira Sans';
     src: url("eot/FiraSans-Light.eot");
     src: local("Fira Sans Light"),
