changing font for site

--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -15,7 +15,7 @@ $brand-language: #B01302;
 
 .jumbotron {
   background: $brand-primary;
-  color: white;
+  color: red;
   padding-bottom: 80px;
 
   .btn-primary {
