changing font for site

--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -14,8 +14,9 @@ $brand-language: #B01302;
 
 
 .jumbotron {
+  font-family: 'Fira Sans';
   background: $brand-primary;
-  color: red;
+  color: white;
   padding-bottom: 80px;
 
   .btn-primary {
