--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -13,11 +13,10 @@ $brand-language: #B01302;
 }
 
 
-.jumbotron {
-  font-family: 'Fira Sans';
-  background: $brand-primary;
+.jumbotron.text-center {
+  font-family: 'Fira Mono';
   color: white;
-  padding-bottom: 80px;
+  padding-bottom: 0px;
 
   .btn-primary {
     background: lighten($brand-primary, 20%);
