--- a/app/assets/stylesheets/overwriteboostrap.css.scss
+++ b/app/assets/stylesheets/overwriteboostrap.css.scss
@@ -80,7 +80,28 @@ margin-left: 50px;
     margin-bottom: 40px;
 
 }
+#app-texty-form-verify-go4.container {
+  background-color: white;
+
+width: 300px;
+height: 300px;
+background: #f5f5f5;
+border-radius: 150px;
+padding: 90px;
+text-align: center;
+display: block;
+margin-top: -20px;
+
+}
 
 .form-control {
   width:100%
+}
+
+.fade {
+  opacity: 0.7;
+}
+
+.fade:hover{
+  opacity: 1;
 }
