--- a/app/views/apps/texty/forgot.html.erb
+++ b/app/views/apps/texty/forgot.html.erb
@@ -1,10 +1,11 @@
 <div class="jumbotron text-center">
   <div class="container">
- <h1> Please provide us with your phone number so we can send you a new verification code </h1>
+ <h1> Enter your phone number and we will send verfication code again </h1>
 
   </div>
+  </div>
 <br><br><br><br>
-  <div class="container" id="app-texty-form-verify-go">
+  <div class="container" id="app-texty-form-verify-go4">
 
     <%= form_for @phone, url: '/apps/texty/update_phone'  do |f| %>
     <%= f.label :number, 'Enter your phone number' %>
@@ -14,9 +15,6 @@
 
 
     <br>
-    <%= f.submit 'Re-send VerCode', class: 'btn btn-primary'%>
+    <%= f.submit 'Send', class: 'btn btn-primary'%>
     <% end %>
   </div>
-
-
-</div>
