--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -9,7 +9,7 @@
 
 <div class="container">
 
-<div class="container" id="app-texty-form-verify-go">
+<div class="container fade" id="app-texty-form-verify-go">
   <%= form_for @phone, url: '/apps/texty/update'  do |f| %>
   <%= f.label :vercode, 'Enter your verification code' %>
   <%= f.password_field :vercode, class: 'form-control', placeholder: '############' %>
@@ -23,11 +23,11 @@
 <br><br><br>
 
 
-<div class="container" id="app-texty-form-verify-go2">
+<div class="container fade" id="app-texty-form-verify-go2">
    Wrong phone number? <%= button_to "Correct", '/apps/texty/forgot' , :method => :get, class: 'btn btn-primary'%>
 </div>
 
-<div class="container" id="app-texty-form-verify-go3">
+<div class="container", "fade" id="app-texty-form-verify-go3">
    Did not get code? <%= button_to "Resend Sms", '/apps/texty/forgot' , :method => :get, class: 'btn btn-primary'%>
 </div>
 </div>
