forgot styling updated

--- a/app/views/apps/texty/forgot.html.erb
+++ b/app/views/apps/texty/forgot.html.erb
@@ -5,7 +5,7 @@
   </div>
   </div>
 <br><br><br><br>
-  <div class="container" id="app-texty-form-verify-go4">
+  <div class="container fade" id="app-texty-form-verify-go4">
 
     <%= form_for @phone, url: '/apps/texty/update_phone'  do |f| %>
     <%= f.label :number, 'Enter your phone number' %>
