--- a/app/assets/stylesheets/overwriteboostrap.css.scss
+++ b/app/assets/stylesheets/overwriteboostrap.css.scss
@@ -3,14 +3,14 @@
 
 body {
   font-family: 'Fira Mono';
-  background-image: url("http://www.pixfizz.com/wp-content/uploads/px-instant_header3.jpg");
+  background-color: #3d4255;
 }
 
 .jumbotron {
 
   margin-bottom: 0px;
   font-family: 'Fira Mono';
-  background-color: #28272d;
+  background-color: #27262c;
 }
 
 .label {
@@ -28,7 +28,6 @@ body {
 
 #app-texty-form-verify-go.container {
   background-color: white;
-  float:left;
 width: 300px;
 height: 300px;
 background: #f5f5f5;
@@ -36,30 +35,21 @@ border-radius: 150px;
 padding: 70px;
 margin-top: 60px;
 text-align: center;
-display: inline-block;
-margin-left: auto;
-margin-left: 50px;
-    margin-right: auto;
-
-    margin-bottom: 40px;
+display: block;
+   margin-left: auto;
+   margin-right: auto
 
 
 }
 
 #app-texty-form-verify-go2.container {
-  background-color: white;
-  float:left;
-width: 300px;
-height: 300px;
-background: #f5f5f5;
-border-radius: 150px;
-padding: 100px;
-text-align: center;
-display: inline-block;
-margin-left: auto;
-    margin-right: auto;
-    margin-left: 50px;
-    margin-bottom: 40px;
+
+  color:white;
+  text-align: center;
+  display: block;
+     margin-left: auto;
+     margin-right: auto
+
 
 }
 
@@ -104,4 +94,8 @@ margin-top: -20px;
 
 .fade:hover{
   opacity: 1;
+}
+
+.jumbotron h1 {
+  font-size: 14px;
 }
