--- a/app/views/apps/texty/forgot.html.erb
+++ b/app/views/apps/texty/forgot.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
   <div class="container">
- <h1> Enter your phone number and we will send verfication code again </h1>
+ <h1> < Enter your phone number and we will send verfication code again /> </h1>
 
 
   </div>
@@ -16,6 +16,6 @@
 
 
     <br>
-    <%= f.submit 'Send', class: 'btn btn-primary'%>
+    <%= f.submit '< Send />', class: 'btn btn-primary'%>
     <% end %>
   </div>
