--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,15 +16,11 @@
   <div class="container">
     <ul class="nav navbar-nav">
       <li class="active">
-        <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
+        <a href="/"><img src="/assets/pixfizzlogo.png" alt="logo" /></a>
       </li>
 
     </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="navbar-right">
-        <a href="https://www.pixfizz.com"><span class="glyphicon glyphicon-book"></span> Pixfizz</a>
-      </li>
-    </ul>
+
   </div>
 </nav>
 
