--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,13 @@
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top navbar-inverse">
-  <div class="container">
-    <ul class="nav navbar-nav">
-      <li class="active">
-        <a href="/"><img src="/assets/pixfizzlogo.png" alt="logo" /></a>
-      </li>
 
-    </ul>
 
-  </div>
+
+        <a style="background-color:#3d4255;  position: relative; left:48%" href="/"><img src="/assets/pixfizzlogo.png" alt="logo" /></a>
+
+
+
 </nav>
 
 <%= yield %>
