--- a/app/views/apps/texty/forgot.html.erb
+++ b/app/views/apps/texty/forgot.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
   <div class="container">
- <h1> < Enter your phone number and we will send verfication code again /> </h1>
+ <h1> <h1 style="color:yellow"><</h1> Enter your phone number and we will send verfication code again </h1><h1 style="color:yellow">/></h1>
 
 
   </div>
