--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -16,6 +16,9 @@ $brand-language: #B01302;
     font-style: normal;
 }
 
+.btn-primary {
+  background-color: #337ab7
+}
 
 .jumbotron.text-center {
   display: block;
