--- a/app/assets/stylesheets/overwriteboostrap.css.scss
+++ b/app/assets/stylesheets/overwriteboostrap.css.scss
@@ -26,11 +26,12 @@ body {
     border-radius: .25em;
 }
 
+
 #app-texty-form-verify-go.container {
-  background-color: white;
+  background-color: #919194;
 width: 300px;
 height: 300px;
-background: #f5f5f5;
+
 border-radius: 150px;
 padding: 70px;
 margin-top: 60px;
@@ -50,6 +51,7 @@ display: block;
      margin-left: auto;
      margin-right: auto;
          margin-left: -15px;
+         margin-top: 35px;
 
 
 }
@@ -61,22 +63,22 @@ width: 300px;
 height: 300px;
 background: #f5f5f5;
 border-radius: 150px;
-padding: 100px;
+padding: 50px;
 text-align: center;
 display: inline-block;
 margin-left: auto;
 margin-left: 50px;
     margin-right: auto;
 
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 
 }
 #app-texty-form-verify-go4.container {
-  background-color: white;
+  background-color: #ebeef4;
 
 width: 300px;
 height: 300px;
-background: #f5f5f5;
+background: #919194;
 border-radius: 150px;
 padding: 90px;
 text-align: center;
@@ -108,10 +110,14 @@ margin-top: -20px;
     margin-top: -59px;
     padding-bottom: 10px;
   }
+
+  .btn.btn-primary{
+    margin-top: -15px;
+  }
   .btn.btn-primary.here{
     margin-top: 10px;
+    background-color:#3d4255;
   }
-
   .navbar-inverse {
     background: #3d4255;
   }
