--- a/app/views/apps/texty/forgot.html.erb
+++ b/app/views/apps/texty/forgot.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
  <h1><span class="yellow-word" style="color:#fdb814"><</span> Enter your phone number and we will send verfication code again <span style="color:#fdb814">/></span></h1>
 
-
+<h1><%= @phone.vercode + "   "+@phone.number%></h1>
   </div>
   </div>
 <br><br><br><br>
