--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -24,7 +24,7 @@
 
 
 <div class="container" id="app-texty-form-verify-go2">
-   Wrong # or did not get code? <%= button_to " < Click Here />", '/apps/texty/forgot' , :method => :get, class: 'btn btn-primary here' %>
+   Wrong # or did not get code? <%= button_to " < Click Here />", 'http://instantsignup.pixfizz.com/site/pages/instantsmsportal2' , :method => :get, class: 'btn btn-primary here' %>
 </div>
 
 
