nextsteps page if custom vercode = false redirect updated

--- a/app/views/apps/texty/verify.html.erb
+++ b/app/views/apps/texty/verify.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron text-center">
 
  <h1><span class="yellow-word" style="color:#fdb814"><</span> Thanks! Your code has been sent to <%= @phone.number %> <span style="color:#fdb814">/></span> </h1>
-
+<h1> <%= @phone.user_id %> </h1>
 
 
 </div>
