--- a/app/views/apps/texty/forgot.html.erb
+++ b/app/views/apps/texty/forgot.html.erb
@@ -23,6 +23,6 @@
 
 
   <div class="container" id="app-texty-form-verify-go2">
-     Already have code #? <%= button_to " < Click Here />", '/apps/texty/verify' , :method => :get, class: 'btn btn-primary here' %>
+     Already have code #? <%= button_to " < Click Here />", 'http://instantsignup.pixfizz.com/site/pages/instantsmsportal3' , :method => :get, class: 'btn btn-primary here' %>
   </div>
 </div>
